openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: arm-protocol
  labels:
    app: arm-protocol
spec:
  to:
    kind: Service
    name: arm-protocol
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
